# rovio_noros_laptop

./: .cproject  .project  CMakeLists.txt  README.md  all.sh  run.sh  run.sh~
cfg/: euroc_cam0.yaml  euroc_cam0.yaml~  rovio.info  rovio.info~
cfg.0/: euroc_cam0.yaml  euroc_cam0.yaml~  rovio.info~
include/rovio/: ImuPrediction.hpp  RovioNode.hpp  RovioNode_noros.hpp  RovioNode_sensors.hpp  SensorReader.hpp
include/rovio/CoordinateTransform/: FeatureOutput.hpp
src/: FeatureCoordinates.cpp  Struct_definition.cpp  rovio_pipeline.cpp
